--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -124,7 +124,6 @@
                                         </state>
                                         <connections>
                                             <action selector="approveImageAction:" destination="ln0-L9-YaG" eventType="touchUpInside" id="ZJm-XU-V9E"/>
-                                            <segue destination="7MI-iQ-4jy" kind="modal" identifier="annotationSegue" modalTransitionStyle="coverVertical" id="9nn-OR-adh"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -225,6 +224,7 @@
                         <outlet property="topContainerView" destination="3hP-Qn-vbY" id="dBJ-m8-LOg"/>
                         <outlet property="topGradientView" destination="bYe-XU-Qb3" id="cdR-pC-1Io"/>
                         <outlet property="undoButton" destination="rsU-2Y-4PW" id="Poq-AA-9Kw"/>
+                        <segue destination="7MI-iQ-4jy" kind="modal" identifier="annotationSegue" modalTransitionStyle="coverVertical" id="TKb-mp-b48"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bsn-pr-Bkb" userLabel="First Responder" sceneMemberID="firstResponder"/>
